<?xml version="1.0"?>
<package>
  <name>rviz_plugin_odometry_to_path</name>
  <version>0.0.0</version>
  <description>The ulises_rviz_plugins package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jorge_j@todo.todo">jorge_j</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>






  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>

  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>


</package>
